--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" src="./assets/css/bootstrap.min.css">
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
+        <script src="./assets/js/font_awesome.js"></script>
         <script src="./assets/js/script.js"></script>
     </head>
     
