--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" src="./assets/css/bootstrap.min.css">
+        <link rel="stylesheet" src="./assets/css/style.css">
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
         <script src="./assets/js/font_awesome.js"></script>
         <script src="./assets/js/script.js"></script>
@@ -11,8 +12,11 @@
             <h1>Ibrahim Yusuf</h1>
             <nav>
                 <ul>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+            <p>placeholder</p>
         </header>
         
         <main>
@@ -36,8 +40,10 @@
             <ul id="contact">
                 <li>
                     <p><a href="https://github.com/iy2k22">GitHub</a></p>
+                    <p><a href="mailto:ibrahimyusufdev@gmail.com">E-mail</a></p>
                 </li>
             </ul>
+            <p>Made with HTML & CSS</p>
         </footer>
     </body>
 </html>
