--- a/index.html
+++ b/index.html
@@ -20,23 +20,25 @@
         </header>
         
         <main>
+            <h2>Projects</h2>
             <ul id="projects">
                 <li>
-                    <h2><a href="https://github.com/iy2k22/be-nc-games">NC Games (Backend)</a></h2>
+                    <h3><a href="https://github.com/iy2k22/be-nc-games">NC Games (Backend)</a></h3>
                     <img src="https://placehold.co/400" />
                 </li>
                 <li>
-                    <h2><a href="https://github.com/iy2k22/nc-games-fe">NC Games (Frontend)</a></h2>
+                    <h3><a href="https://github.com/iy2k22/nc-games-fe">NC Games (Frontend)</a></h3>
                     <img src="https://placehold.co/400" />
                 </li>
                 <li>
-                    <h2><a href="https://github.com/valentinbiz/benchIt">benchIt</a></h2>
+                    <h3><a href="https://github.com/valentinbiz/benchIt">benchIt</a></h3>
                     <img src="https://placehold.co/400" />
                 </li>
             </ul>
         </main>
         
         <footer>
+            <h2>Contact Me</h2>
             <ul id="contact">
                 <li>
                     <p><a href="https://github.com/iy2k22">GitHub</a></p>
