--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
     <head>
-        <link rel="stylesheet" src="./assets/css/bootstrap.min.css">
-        <link rel="stylesheet" src="./assets/css/style.css">
-        <script src="./assets/js/jquery-3.7.1.min.js"></script>
-        <script src="./assets/js/font_awesome.js"></script>
-        <script src="./assets/js/script.js"></script>
+        <title>Ibrahim Yusuf</title>
+        <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     
     <body>
@@ -40,10 +38,8 @@
         <footer>
             <h2>Contact Me</h2>
             <ul id="contact">
-                <li>
-                    <p><a href="https://github.com/iy2k22">GitHub</a></p>
-                    <p><a href="mailto:ibrahimyusufdev@gmail.com">E-mail</a></p>
-                </li>
+                <li><a href="https://github.com/iy2k22">GitHub</a></li>
+                <li><a href="mailto:ibrahimyusufdev@gmail.com">E-mail</a></li>
             </ul>
             <p>Made with HTML & CSS</p>
         </footer>
