--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="./pages/projects.html">Projects</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./pages/contact.html">Contact</a>
                       </li>
                     </ul>
                   </div>
@@ -29,7 +32,7 @@
         </header>
         
         <main>
-            <div id="hero">
+            <div id="hero" class="box">
                 <p>placeholder</p>
             </div>
         </main>
