Finish design of homepage

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -32,7 +32,7 @@
         </header>
         
         <main>
-            <div id="projectsHeader">
+            <div id="heading">
                 <h2>Projects</h2>
             </div>
             <div id="carouselExampleCaptions" class="carousel slide">
