--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Ibrahim Yusuf</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="./assets/css/style.css">
@@ -8,25 +9,35 @@
     </head>
     
     <body>
-        <header>
-          <div class="heading">
-            <h1>Ibrahim Yusuf</h1>
+        <header class="container">
+          <div class="row justify-content-center">
+            <div id="heading" class="col-lg-4 col-sm-6">
+              <h1>Ibrahim Yusuf</h1>
+            </div>
           </div>
-          <img src="./assets/images/arrow.png" />
+          <div class="row justify-content-center" style="margin-top: 2px;">
+            <img src="./assets/images/arrow.png" id="arrow" class="col-sm-1 col-md-1 col-lg-1" />
+          </div>
         </header>
         
-        <main>
+        <main class="container-fluid">
             <div id="hero" class="box">
                 <h2>Hi.</h2>
                 <p>I'm Ibrahim. I'm an aspiring full-stack developer who prides himself on writing clean, elegant code.</p>
+                <div class="row justify-content-center">
                 <img src="./assets/images/SMBTLL_Mario_Icon.webp" />
-                <div id="links">
-                  <a href="./pages/projects.html" id="projectsLink">
-                    <i class="fa-brands fa-github-alt"></i>Projects
-                  </a>
-                  <a href="./pages/contact.html" id="contactLink">
-                    <i class="fa-solid fa-address-book"></i>Contact
-                  </a>
+                </div>
+                <div id="links" class="row justify-content-center">
+                  <div class="col-sm-4">
+                    <a href="./pages/projects.html" id="projectsLink">
+                      <i class="fa-brands fa-github-alt"></i>Projects
+                    </a>
+                  </div>
+                  <div class="col-sm-4">
+                    <a href="./pages/contact.html" id="contactLink">
+                      <i class="fa-solid fa-address-book"></i>Contact
+                    </a>
+                  </div>
                 </div>
             </div>
         </main>
