remove inline styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <h1>Ibrahim Yusuf</h1>
             </div>
           </div>
-          <div class="row justify-content-center" style="margin-top: 2px;">
+          <div class="row justify-content-center" id="arrowRow">
             <img src="./assets/images/arrow.png" id="arrow" class="col-sm-1 col-md-1 col-lg-1" />
           </div>
         </header>
