get basic structure of project page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,6 +26,7 @@
   </header>
 
   <main class="container-fluid">
+    <div class="row justify-content-center" id="projects"></div>
   </main>
 </body>
 
