finish structure of project page

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         
         <main class="container-fluid">
             <div id="hero" class="box">
-                <h2>Hi.</h2>
+                <h2 class="boxHeading">Hi.</h2>
                 <p>I'm Ibrahim. I'm an aspiring full-stack developer who prides himself on writing clean, elegant code.</p>
                 <div class="row justify-content-center">
                 <img src="./assets/images/SMBTLL_Mario_Icon.webp" />
                 </div>
-                <div id="links" class="row justify-content-center">
-                  <div class="col-sm-4">
-                    <a href="./pages/projects.html" id="projectsLink">
+                <div class="row justify-content-center">
+                  <div class="col-sm-4 homeLink">
+                    <a href="./pages/projects.html" class="link">
                       <i class="fa-brands fa-github-alt"></i>Projects
                     </a>
                   </div>
-                  <div class="col-sm-4">
-                    <a href="./pages/contact.html" id="contactLink">
+                  <div class="col-sm-4 homeLink">
+                    <a href="./pages/contact.html" class="link">
                       <i class="fa-solid fa-address-book"></i>Contact
                     </a>
                   </div>
