start on project description page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -24,6 +24,12 @@
     <div class="row justify-content-center" id="arrowRow">
       <img src="../assets/images/arrow.png" id="arrow" class="col-sm-1 col-md-1 col-lg-1" />
     </div>
+    <div class="row justify-content-center">
+      <div class="box descriptor-box">
+        <p class="descriptor">Here are some of the bigger projects I've worked on. These should hopefully give you an
+          idea of how skilled I am in terms of development.</p>
+      </div>
+    </div>
   </header>
 
   <main class="container-fluid">
