--- a/pages/project.html
+++ b/pages/project.html
@@ -1,13 +1,45 @@
 <html>
-    <head>
-        <title></title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="../assets/css/style.css" />
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-        <script src="../assets/js/project.js"></script>
-    </head>
 
-    <body>
-    </body>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="../assets/js/font_awesome.js"></script>
+    <script src="../assets/js/project.js"></script>
+</head>
+
+<body>
+    <header class="container">
+        <div class="row justify-content-center">
+            <div id="heading" class="col-lg-4 col-sm-6">
+                <h1></h1>
+            </div>
+        </div>
+        <div class="row justify-content-center" id="arrowRow">
+            <img src="../assets/images/arrow.png" id="arrow" class="col-sm-1 col-md-1 col-lg-1" />
+        </div>
+    </header>
+
+    <main class="container-fluid">
+        <div id="hero" class="box">
+            <h2 class="boxHeading" id="box-header"></h2>
+            <p id="project-description">placeholder</p>
+            <ul id="lang" class="fa-ul"></ul>
+            <div class="row justify-content-end">
+                <img id="project-img"/>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-sm-4 homeLink">
+                    <a class="link" id="repo-link">
+                        <i class="fa-brands fa-github-alt"></i>Repository
+                    </a>
+                </div>
+            </div>
+        </div>
+    </main>
+</body>
+
 </html>
