--- a/pages/project.html
+++ b/pages/project.html
@@ -26,7 +26,7 @@
     <main class="container-fluid">
         <div id="hero" class="box">
             <h2 class="boxHeading" id="box-header"></h2>
-            <p id="project-description">placeholder</p>
+            <p id="project-description"></p>
             <ul id="lang" class="fa-ul"></ul>
             <div class="row justify-content-end">
                 <img id="project-img"/>
