--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2 class="boxHeading">Hi.</h2>
                 <p>I'm Ibrahim. I'm an aspiring full-stack developer who prides himself on writing clean, elegant code.</p>
                 <div class="row justify-content-center">
-                <img src="./assets/images/SMBTLL_Mario_Icon.webp" />
+                <img src="./assets/images/SMBTLL_Mario_Icon.webp" id="pfp" />
                 </div>
                 <div class="row justify-content-center">
                   <div class="col-sm-4 homeLink">
