--- a/pages/project.html
+++ b/pages/project.html
@@ -25,13 +25,17 @@
 
     <main class="container-fluid">
         <div id="hero" class="box">
-            <h2 class="boxHeading" id="box-header"></h2>
+            <h2 class="boxHeading" id="box-header">Overview</h2>
             <p id="project-description"></p>
-            <ul id="lang" class="fa-ul"></ul>
-            <div class="row justify-content-end">
-                <img id="project-img"/>
-            </div>
             <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-6 col-lg-6 align-items-start">
+                    <ul id="lang" class="fa-ul"></ul>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6 align-items-end">
+                    <img id="project-img" class="img-fluid" />
+                </div>
+            </div>
+            <div class="row justify-content-center" style="margin-top: 20px;">
                 <div class="col-sm-4 homeLink">
                     <a class="link" id="repo-link">
                         <i class="fa-brands fa-github-alt"></i>Repository
