--- a/pages/project.html
+++ b/pages/project.html
@@ -44,6 +44,14 @@
             </div>
         </div>
     </main>
+    
+    <footer class="container">
+        <div class="row">
+            <a href="./projects.html">
+                <p>Back to projects page.</p>
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
