add footer to subpages

--- a/pages/project.html
+++ b/pages/project.html
@@ -46,9 +46,9 @@
     </main>
     
     <footer class="container">
-        <div class="row">
-            <a href="./projects.html">
-                <p>Back to projects page.</p>
+        <div class="row justify-content-center">
+            <a href="./projects.html" class="col-sm-12 col-md-4 col-lg-4 footer-link">
+                <p>&#x21b0 Back to projects page</p>
             </a>
         </div>
     </footer>
