--- a/pages/projects.html
+++ b/pages/projects.html
@@ -35,6 +35,14 @@
   <main class="container-fluid">
     <div class="row justify-content-center" id="projects"></div>
   </main>
+
+  <footer class="container">
+    <div class="row justify-content-center">
+      <a href="../index.html" class="col-sm-12 col-md-4 col-lg-4 footer-link">
+        <p>&#x21b0 Back to homepage</p>
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
