--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,29 +12,20 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ibrahim Yusuf</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./projects.html">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#" aria-current="page">Contact</a>
-            </li>
-          </ul>
-        </div>
+  <header class="container">
+    <div class="row justify-content-center">
+      <div id="heading" class="col-lg-4 col-sm-6">
+        <h1>Contact Me</h1>
       </div>
-    </nav>
+    </div>
+    <div class="row justify-content-center" id="arrowRow">
+      <img src="../assets/images/arrow.png" id="arrow" class="col-sm-1 col-md-1 col-lg-1" />
+    </div>
+    <div class="row justify-content-center">
+      <div class="box descriptor-box">
+        <p class="descriptor">Want to get in touch with me? Here are a few places where you can contact me.</p>
+      </div>
+    </div>
   </header>
 
   <main>
