--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,6 +27,22 @@
   </header>
 
   <main class="container-fluid">
+    <div class="box">
+      <div class="row justify-content-center">
+        <div class="col-sm-12 col-md-6 col-lg-6 contact">
+          <h4><i class="fa-brands fa-github-alt contact-icon"></i></h4>
+          <h5>GitHub</h5>
+          <p>This is where you can find all my software projects.</p>
+          <a class="link" href="https://github.com/iy2k22">Go there</a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6 contact">
+          <h4><i class="fa-brands fa-linkedin contact-icon"></i></h4>
+          <h5>LinkedIn</h5>
+          <p>This is where you can find my profile and what I get up to.</p>
+          <a class="link" href="https://www.linkedin.com/in/ibrahim-yusuf-a9b88a265/">Go there</a>
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer class="container">
