--- a/pages/project.html
+++ b/pages/project.html
@@ -38,7 +38,7 @@
             <div class="row justify-content-center" style="margin-top: 20px;">
                 <div class="col-sm-4 homeLink">
                     <a class="link" id="repo-link">
-                        <i class="fa-brands fa-github-alt"></i>Repository
+                        <i class="fa-brands fa-git-alt"></i>Repository
                     </a>
                 </div>
             </div>
