change linkedin text

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,7 @@
         <div class="col-sm-12 col-md-4 col-lg-4 contact">
           <h4><i class="fa-brands fa-linkedin contact-icon"></i></h4>
           <h5>LinkedIn</h5>
-          <p>This is where you can find my profile and what I get up to.</p>
+          <p>This is where you can find my profile and what I do.</p>
           <a class="link" href="https://www.linkedin.com/in/ibrahim-yusuf-a9b88a265/">Go there</a>
         </div>
       </div>
