--- a/pages/project.html
+++ b/pages/project.html
@@ -27,7 +27,7 @@
         <div id="hero" class="box">
             <h2 class="boxHeading" id="box-header">Overview</h2>
             <p id="project-description"></p>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center body-row">
                 <div class="col-sm-12 col-md-6 col-lg-6 align-items-start">
                     <ul id="lang" class="fa-ul"></ul>
                 </div>
@@ -35,7 +35,7 @@
                     <img id="project-img" class="img-fluid" />
                 </div>
             </div>
-            <div class="row justify-content-center" style="margin-top: 20px;">
+            <div class="row justify-content-center body-row" style="margin-top: 20px;">
                 <div class="col-sm-4 homeLink">
                     <a class="link" id="repo-link">
                         <i class="fa-brands fa-git-alt"></i>Repository
