add deployed link to project page, clean up projects.js

--- a/pages/project.html
+++ b/pages/project.html
@@ -41,6 +41,11 @@
                         <i class="fa-brands fa-git-alt"></i>Repository
                     </a>
                 </div>
+                <div class="col-sm-4 homeLink" id="deploy-container">
+                    <a class="link" id="deployed-link">
+                        <i class="fa-solid fa-globe"></i>Deployed
+                    </a>
+                </div>
             </div>
         </div>
     </main>
